[package]
name = "cueball"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = { version = "0.30.0", features = [
	"wayland" 
]}
egui = "0.30.0"
egui_extras = "0.30.0"
env_logger = "0.11.6"
log = "0.4.25"
mlua = { version = "0.10.3", features = ["async", "lua54", "macros"] }
reedline = "0.38.0"
serde = "1.0.217"
