[package]
name = "cueball"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.97"
eframe = { version = "0.30.0", features = [
	"wayland",
	"persistence"
]}
egui = "0.30.0"
egui_extras = { version = "0.30.0", features = ["all_loaders"] }
env_logger = "0.11.6"
log = "0.4.25"
mlua = { version = "0.10.3", features = ["async", "lua54", "macros"] }
reedline = "0.38.0"
rfd = "0.15.3"
rodio = "0.20.1"
serde = "1.0.217"
serde_json = "1.0.140"
typetag = "0.2.20"
